fixed notepad scrollbar style

--- a/css/main.css
+++ b/css/main.css
@@ -535,6 +535,22 @@ body {
   border: 0px solid #ccc;
 }
 
+.quill-editor-container::-webkit-scrollbar {
+  width: 5px;
+}
+
+.quill-editor-container::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+.quill-editor-container::-webkit-scrollbar-thumb {
+  background: #ccc;
+}
+
+.quill-editor-container::-webkit-scrollbar-thumb:hover {
+  background: #999;
+}
+
 .quill-editor {
   min-height: 100%;
   height: auto;
